# GTA04-Tester-Gtk

./: .gitignore  AUTHORS  COPYING  README  configure.ac
data/: Makefile.am  gta04tester.desktop.in.in
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/images/: Makefile.am
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  gta04tester.vala  main.vala
vapi/: config.vapi
